--- a/fitness-tracker-frontend/src/App.css
+++ b/fitness-tracker-frontend/src/App.css
@@ -9,7 +9,6 @@
   padding: 0;
 }
 
-/* additional style to make the AppBar takes full width */
-.MuiAppBar-root {
-  width: 100%;
+body {
+  background-color: rgb(241, 234, 255);
 }
