user profile update

--- a/fitness-tracker-frontend/src/App.css
+++ b/fitness-tracker-frontend/src/App.css
@@ -2,6 +2,7 @@
   margin: 0 auto; 
   padding: 0;
   text-align: center;
+  width: 100%;
 }
 
 * { 
@@ -10,5 +11,5 @@
 }
 
 body {
-  background-color: rgb(241, 234, 255);
+  background-color: rgb(233, 237, 240);
 }
